--- a/lib/dedalo/tools/tool_transcription/html/tool_transcription_page.phtml
+++ b/lib/dedalo/tools/tool_transcription/html/tool_transcription_page.phtml
@@ -72,7 +72,7 @@
 			$html .= "</select>";
 			*/
 		$html .= "</div>";#end lang_selector_in_header
-		/**/
+	
 
 
 		#
@@ -96,19 +96,18 @@
 		# COMPONENT STATE
 		$html   .= $component_state_html;
 
-
 	$html .= "</div><!-- /header_tool -->";
 
 
 
 	#
 	# TOOL BODY
-	$html .= "<div class=\"wrap_tool_transcription_page\" >";
+	$html .= "<div class=\"wrap_tool_transcription_page\">";
 
 		
 		#
 		# LEFT DIV TEXT AREA
-		$html .= "<div id=\"tool_transcription_left\" class=\"tool_transcription_left\">";
+		$html .= "<div id=\"tool_transcription_left\" class=\"tool_transcription_left $component_name\">";
 
 			#
 			# TAGS INSPECTOR
@@ -128,7 +127,13 @@
 
 			#
 			# TEXT EDITOR FROM COMPONENT_TEXT_AREA
-			$html 	.= $html_text;
+			$html .= $html_component_text_area;
+
+			#
+			# OTHER COMPONENTS
+			if (isset($html_other_components)) {
+				$html .= $html_other_components;
+			}
 
 		$html .= "</div><!-- /tool_transcription_left -->";
 
@@ -185,12 +190,9 @@
 					}
 					break;
 				default:
-					# code...
+					# NOthing to add
 					break;
 			}
-			
-			
-			
 
 					
 
@@ -208,12 +210,11 @@
 
 
 
-	print $html;		
-?>
+	print $html;
 
+
+?>
 <script>
 	var component_related_obj_tipo = "<?php echo $component_related_obj_tipo ?>"; // To standarize..	
 	tool_transcription.init({textarea_lang:"<?php echo $textarea_lang ?>"});	
 </script>
-
-
