--- a/lib/dedalo/diffusion/diffusion_index_ts/css/diffusion_index_ts.less
+++ b/lib/dedalo/diffusion/diffusion_index_ts/css/diffusion_index_ts.less
@@ -111,8 +111,7 @@ table.diffusion_index_ts {
 		/*line-height: 1em;*/
 		min-height: 22px;
 		border-bottom: 1px solid #d5d5d5;
-	}
-	
+	}	
 	table.diffusion_index_ts table.diffusion_index_ts_row_table TD:nth-of-type(1),
 	table.diffusion_index_ts table.diffusion_index_ts_row_table TH:nth-of-type(1)
 	{
@@ -190,6 +189,11 @@ table.diffusion_index_ts {
 		white-space: nowrap;
 		padding-right: 5px;
 		}
+		td.td_info > .icon_bs {
+			margin-left: 2px;
+			margin-right: 2px;
+			vertical-align: bottom;
+		}		
 	@media screen and (max-width: 1024px) {
 		td.td_info {
 			white-space: normal;
