--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -330,7 +330,7 @@
 		
 		#sidebar .css_wrap_rows_paginator {
 			@media screen and (max-width: @movil_max_width) { // 768px
-				height: 28px;
+				//height: 28px;
 				top: 0;
 				position: relative;
 				text-align: center;
