--- a/lib/dedalo/component_relation_parent/css/component_relation_parent.less
+++ b/lib/dedalo/component_relation_parent/css/component_relation_parent.less
@@ -9,7 +9,9 @@
 /* WRAP RELATION_PARENT
 ---------------------------------------- */
 .css_wrap_relation_parent {
+	//background-color: #EFD3D8;
 	//border-bottom: 1px solid #E6E6E6;
+	min-height: 80px !important;
 	}
 	.css_wrap_relation_parent .content_data {
 		
@@ -19,6 +21,12 @@
 
 	/* wrap_relation_parent_values
 	---------------------------------------- */
+	.wrap_relation_parent_values {
+		//clear: both;
+    	width: 80%;
+    	//padding-top: 7px;
+    	//background-color: #EFD3D8
+	}
 	.css_wrap_relation_parent .content_data .wrap_relation_parent_values {
 		display: inline-block;
 		}
@@ -107,6 +115,32 @@
 
 
 
+/* AUTOCOMPLETE
+---------------------------------------- */
+	.css_wrap_relation_parent .autocomplete_wrapper {
+		float: right;
+		position: relative;
+		top: 22px;
+	}
 
+/* SEARCH
+---------------------------------------- */	
+	.css_relation_parent_valor.in_search_mode {
+		clear: both;
+    	width: 100%;
+    	padding-top: 7px;
+	}
+	.css_wrap_relation_parent.in_search_mode .autocomplete_wrapper {
+		float: left;
+		position: relative;
+		top: 0;
+	}
+	.css_relation_parent_button_delete {
+	    position: relative;
+	    top: 0;
+	    margin-right: 5px;
+	    background-position: -456px 0;
+	    opacity: .3;
+	}
 
 
