--- a/lib/dedalo/component_av/html/component_av_edit.phtml
+++ b/lib/dedalo/component_av/html/component_av_edit.phtml
@@ -25,108 +25,120 @@
 		$html_label = component_common_draw::draw_label($this);
 		
 		# CONTENIDO (INPUT)
-		$html_contenido = '';
+		$html_content = '';
 		switch(true) {
 				
-			case $permissions===0 :	$html_contenido .= "";
-						break;
+			case $permissions===0 :
+				$html_content .= "";
+				break;
 							
 			case ($permissions>=1) :
 			
-						# POSTERFRAME
+				# POSTERFRAME
 
-						$open_tool_default='';
-						$add_class='';
+				$open_tool_default='';
+				$add_class='';
 
-						$av_file_exits = file_exists($this->get_video_path());
-						$av_subtitles_file_exits = file_exists($this->get_subtitles_path());
-	
-						# A NOT EXISTS. PLACE DEDALO IMAGE WITH LINK TO DEFAULT TOOL
-						# dump( component_security_tools::is_authorized_tool_for_logged_user('open_tool_upload'), ' is_authorized_tool_for_logged_user($tool_name) ++ '.to_string());
-						if ( component_security_tools::is_authorized_tool_for_logged_user('tool_upload') &&
-							 !$av_file_exits &&
-							 !$this->get_original_file_path(DEDALO_AV_QUALITY_ORIGINAL)
-							) {
-							
-							$open_tool_default .= "data-video_id=\"$video_id\" ";
-							$open_tool_default .= "data-quality=\"".DEDALO_AV_QUALITY_ORIGINAL."\" ";
-							$open_tool_default .= "data-aditional_path=\"$aditional_path\" ";
-							$open_tool_default .= "data-initial_media_path=\"$initial_media_path\" ";
-							$open_tool_default .= "data-tipo=\"$tipo\" ";
-							$open_tool_default .= "data-parent=\"$parent\" ";
-							$open_tool_default .= "data-section_tipo=\"$section_tipo\" ";
-							$open_tool_default .= "onclick=\"tool_common.open_tool_upload(this)\" ";
-							$open_tool_default .= "title=\"Upload file in original quality\" ";
+				$av_file_exits = file_exists($this->get_video_path());
+				$av_subtitles_file_exits = file_exists($this->get_subtitles_path());
 
-							$add_class = 'no_file';
+				# A NOT EXISTS. PLACE DEDALO IMAGE WITH LINK TO DEFAULT TOOL
+				# dump( component_security_tools::is_authorized_tool_for_logged_user('open_tool_upload'), ' is_authorized_tool_for_logged_user($tool_name) ++ '.to_string());
+				if ( component_security_tools::is_authorized_tool_for_logged_user('tool_upload') &&
+					 !$av_file_exits &&
+					 !$this->get_original_file_path(DEDALO_AV_QUALITY_ORIGINAL)
+					) {
+					
+					$open_tool_default .= "data-video_id=\"$video_id\" ";
+					$open_tool_default .= "data-quality=\"".DEDALO_AV_QUALITY_ORIGINAL."\" ";
+					$open_tool_default .= "data-aditional_path=\"$aditional_path\" ";
+					$open_tool_default .= "data-initial_media_path=\"$initial_media_path\" ";
+					$open_tool_default .= "data-tipo=\"$tipo\" ";
+					$open_tool_default .= "data-parent=\"$parent\" ";
+					$open_tool_default .= "data-section_tipo=\"$section_tipo\" ";
+					$open_tool_default .= "onclick=\"tool_common.open_tool_upload(this)\" ";
+					$open_tool_default .= "title=\"Upload file in original quality\" ";
+
+					$add_class = 'no_file';
+				}
+
+				# PLAYER
+				#$html_content .= $player_html	; # Rendered in player mode
+				# PLAYER
+				$html_content .= "<div class=\"css_posterframe_wrap $add_class\" {$open_tool_default}>";
+
+
+				if ($av_file_exits) {
+					
+					# VIDEO
+					$html_content .= "<video id=\"{$player_id}\" class=\"css_av_video\" style=\"height:404px;\" poster=\"$posterframe_url\" preload=\"none\" controls=\"controls\" ";
+					$html_content .= "onclick=\"component_av.video_play_toggle(this)\" ";
+					$html_content .= "onerror=\"component_av.failed(event)\" ";
+					$html_content .= "data-tipo=\"{$tipo}\" ";
+					$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+					$html_content .= "data-parent=\"{$parent}\" ";
+					$html_content .= "data-video_id=\"{$video_id}\" ";				
+					$html_content .= ">";
+
+						$html_content .= "<source id=\"video_mp4_{$tipo}\" src=\"$video_url\" type=\"video/mp4\" onerror=\"alert('Sorry. Unplayable media')\">";	//onerror=\"alert('Sorry. Unplayable media')\" 
+						
+						# FALLBACK IMG (no html5 codec video support)
+						$html_content .= " <img src=\"$posterframe_url\" class=\"av_posterframe\" alt=\"Posterframe\" title=\"No video playback capabilities\"/>";
+					
+						#
+						# VTT SUBTITLES TRACK
+						if($av_subtitles_file_exits){
+
+							$html_content .= "<track label=\"Subtitles\" kind=\"subtitles\" srclang=\"en\" src=\"$subtitles_url\" default>";
 						}
 
-						# PLAYER
-						#$html_contenido .= $player_html	; # Rendered in player mode
-						# PLAYER
-						$html_contenido .= "<div class=\"css_posterframe_wrap $add_class\" {$open_tool_default}>";
+					$html_content .= "</video>";
 
+					
+					#if(SHOW_DEBUG===true) {								
+						$target_id = 'info_video_'.$video_id;
 
-						if ($av_file_exits) {
-							
-							# VIDEO
-							$html_contenido .= "<video id=\"{$player_id}\" class=\"css_av_video\" style=\"height:404px;\" poster=\"$posterframe_url\" preload=\"none\" controls=\"controls\" ";
-							$html_contenido .= "onclick=\"component_av.video_play_toggle(this)\" ";
-							$html_contenido .= "onerror=\"component_av.failed(event)\" ";
-							$html_contenido .= "data-tipo=\"{$tipo}\" ";
-							$html_contenido .= "data-section_tipo=\"{$section_tipo}\" ";
-							$html_contenido .= "data-parent=\"{$parent}\" ";
-							$html_contenido .= "data-video_id=\"{$video_id}\" ";				
-							$html_contenido .= ">";
+						$html_content .= "<div class=\"info_video_debug\" ";
+						$html_content .= "onclick=\"component_av.get_video_streams_info('{$video_path}', '{$target_id}')\">";
+						$html_content .= "Info video ";	//<pre style=\"display:none\">". print_r($media_streams,true)."</pre>";								
+						$html_content .= "</div>";
+						$html_content .= "<pre id=\"$target_id\" style=\"display:none;text-align:left\"></pre>";
+					#}
 
-								$html_contenido .= "<source id=\"video_mp4_{$tipo}\" src=\"$video_url\" type=\"video/mp4\" onerror=\"alert('Sorry. Unplayable media')\">";	//onerror=\"alert('Sorry. Unplayable media')\" 
-								
-								# FALLBACK IMG (no html5 codec video support)
-								$html_contenido .= " <img src=\"$posterframe_url\" class=\"av_posterframe\" alt=\"Posterframe\" title=\"No video playback capabilities\"/>";
-							
-								#
-								# VTT SUBTITLES TRACK
-								if($av_subtitles_file_exits){
+				}else{
+					
+					# POSTERFRAME (When video file not exists)
+					$html_content .= "<img class=\"av_posterframe\" src=\"$posterframe_url\" data-video_id=\"$video_id\"/>";							
+				}
 
-									$html_contenido .= "<track label=\"Subtitles\" kind=\"subtitles\" srclang=\"en\" src=\"$subtitles_url\" default>";
-								}
+					
+				$html_content .= "</div>";//end css_posterframe_wrap
+				if(SHOW_DEBUG===true) {
+					$html_content .= "<!-- /css_posterframe_wrap -->";;
+				}
 
-							$html_contenido .= "</video>";
+				# VERSIONS
+				#$html_content .= $versions_html ;
 
-							
-							#if(SHOW_DEBUG===true) {								
-								$target_id = 'info_video_'.$video_id;
-
-								$html_contenido .= "<div class=\"info_video_debug\" ";
-								$html_contenido .= "onclick=\"component_av.get_video_streams_info('{$video_path}', '{$target_id}')\">";
-								$html_contenido .= "Info video ";	//<pre style=\"display:none\">". print_r($media_streams,true)."</pre>";								
-								$html_contenido .= "</div>";
-								$html_contenido .= "<pre id=\"$target_id\" style=\"display:none;text-align:left\"></pre>";
-							#}
-
-						}else{
-							
-							# POSTERFRAME (When video file not exists)							
-							$html_contenido .= "<img class=\"av_posterframe\" src=\"$posterframe_url\" data-video_id=\"$video_id\"/>";							
-						}						
-
-							
-						$html_contenido .= "</div>";//end css_posterframe_wrap
-						if(SHOW_DEBUG===true) {
-							$html_contenido .= "<!-- /css_posterframe_wrap -->";;
-						}
-
-						# VERSIONS
-						#$html_contenido .= $versions_html ;												
+				#
+				# JS Init component
+				$html_content .= '<script>';
+				# Init component
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->wrapper_id 		= $id_wrapper;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';
+				break;												
 		}
 
 		# Prepare content to show in page
-		tools::prepare_content($html_contenido);	
+		tools::prepare_content($html_content);	
 		
 
 		# PRINT HTML
 		print $html_label;
-		print $html_contenido;
+		print $html_content;
 	
 	
 	print "</div>"; //wrap
